--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.aseproject.frigg">
 
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <queries>
+        <intent>
+            <action android:name="android.speech.RecognitionService" />
+        </intent>
+    </queries>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -16,6 +26,11 @@
         <activity
             android:name=".activity.FriggActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".activity.VoiceRecognitionActivity"
+            android:exported="false"/>
+
         <activity
             android:name=".activity.NavActivity"
             android:exported="true">
