--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".activity.AuthActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".activity.NewFoodItemActivity"
             android:exported="false"
             android:label="@string/title_activity_new_food_item" />
