--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,10 +24,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.FamilyMemberActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.DishRecipeActivity"
             android:exported="false"
-            android:label="@string/title_activity_dish_recipe"
-            android:theme="@style/Theme.Frigg.NoActionBar" />
+            android:label="@string/title_activity_dish_recipe" />
         <activity
             android:name=".activity.SplashActivity"
             android:exported="true">
