--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         android:theme="@style/Theme.Frigg"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <service
+            android:name=".backgroundService.ExpiryService"
+            android:exported="false">
+        </service>
         <activity
             android:name=".activity.FamilyMemberActivity"
             android:exported="false" />
