--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,11 @@
             android:name=".activity.AuthActivity"
             android:exported="false">
         </activity>
+
+        <activity
+            android:name=".activity.CameraActivity"
+            android:exported="false">
+        </activity>
         <activity
             android:name=".activity.NewFoodItemActivity"
             android:exported="false"
