--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,17 @@
         android:theme="@style/Theme.Frigg"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".activity.FridgeToGroceryActivity"
+            android:exported="false" />
+
         <service
             android:name=".backgroundService.ExpiryService"
-            android:exported="false">
-        </service>
+            android:exported="false"></service>
         <service
             android:name=".backgroundService.ThresholdItemsService"
-            android:exported="false">
-        </service>
+            android:exported="false"></service>
+
         <activity
             android:name=".activity.FamilyMemberActivity"
             android:exported="false" />
@@ -49,13 +52,10 @@
         </activity>
         <activity
             android:name=".activity.AuthActivity"
-            android:exported="false">
-        </activity>
-
+            android:exported="false"></activity>
         <activity
             android:name=".activity.CameraActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
         <activity
             android:name=".activity.NewFoodItemActivity"
             android:exported="false"
@@ -73,7 +73,8 @@
             android:name=".activity.NavActivity"
             android:exported="true" />
 
-        <receiver android:name=".util.BroadcastReceiverHelper"
+        <receiver
+            android:name=".util.BroadcastReceiverHelper"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
