--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,10 @@
 
         <service
             android:name=".backgroundService.ExpiryService"
-            android:exported="false"></service>
+            android:exported="false" />
         <service
             android:name=".backgroundService.ThresholdItemsService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <activity
             android:name=".activity.FamilyMemberActivity"
