--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,15 +24,18 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.FridgeToGroceryActivity"
             android:exported="false" />
 
         <service
             android:name=".backgroundService.ExpiryService"
-            android:exported="false"></service>
+            android:exported="false" />
         <service
             android:name=".backgroundService.ThresholdItemsService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <activity
             android:name=".activity.FamilyMemberActivity"
@@ -52,10 +55,10 @@
         </activity>
         <activity
             android:name=".activity.AuthActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".activity.CameraActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".activity.NewFoodItemActivity"
             android:exported="false"
