--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.PreferencesActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.ProfileActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.FridgeToGroceryActivity"
             android:exported="false"
@@ -46,8 +49,8 @@
         <activity
             android:name=".activity.DishRecipeActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_dish_recipe" />
+            android:label="@string/title_activity_dish_recipe"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.SplashActivity"
             android:exported="true"
@@ -69,8 +72,8 @@
         <activity
             android:name=".activity.NewFoodItemActivity"
             android:exported="false"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_new_food_item" />
+            android:label="@string/title_activity_new_food_item"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.FoodDetailActivity"
             android:exported="false"
